--- a/LibraryAutomationSystem/LibraryAutomationSystem.csproj
+++ b/LibraryAutomationSystem/LibraryAutomationSystem.csproj
@@ -43,22 +43,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LibrarAutomationSystem.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>E:\ASPIRE\Asp.net web application\sample_web_application\LibrarAutomationSystem.Common\bin\Debug\LibrarAutomationSystem.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="LibraryAutomationSystem.BL">
-      <HintPath>E:\ASPIRE\Asp.net web application\sample_web_application\LibraryAutomationSystem.BL\bin\Debug\LibraryAutomationSystem.BL.dll</HintPath>
-    </Reference>
-    <Reference Include="LibraryAutomationSystem.DAL">
-      <HintPath>E:\ASPIRE\Asp.net web application\sample_web_application\LibraryAutomationSystem.DAL\bin\Debug\LibraryAutomationSystem.DAL.dll</HintPath>
-    </Reference>
-    <Reference Include="LibraryAutomationSystem.Entity">
-      <HintPath>E:\ASPIRE\Asp.net web application\sample_web_application\LibraryAutomationSystem.Entity\bin\Debug\LibraryAutomationSystem.Entity.dll</HintPath>
-    </Reference>
-    <Reference Include="LibraryAutomationSystem.PL">
-      <HintPath>E:\ASPIRE\Asp.net web application\sample_web_application\LibraryAutomationSystem.PL\bin\Debug\LibraryAutomationSystem.PL.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=1.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.1.2.1\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
       <Private>True</Private>
@@ -173,6 +157,16 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryAutomationSystem.DAL\LibraryAutomationSystem.DAL.csproj">
+      <Project>{1e56d511-b0ef-4085-8f75-fdb0a59f097a}</Project>
+      <Name>LibraryAutomationSystem.DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LibraryAutomationSystem.Entity\LibraryAutomationSystem.Entity.csproj">
+      <Project>{cce808bc-b39a-48ab-a53b-a290d0d34913}</Project>
+      <Name>LibraryAutomationSystem.Entity</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
