--- a/LibraryAutomationSystem/LibraryAutomationSystem.csproj
+++ b/LibraryAutomationSystem/LibraryAutomationSystem.csproj
@@ -95,13 +95,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Home.aspx" />
+    <Content Include="LibraryAutomationSystemGridView.aspx" />
     <Content Include="Styles\MasterStyle.css" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="WebForm1.aspx" />
     <Content Include="Home.Master" />
+    <Content Include="WebForm1.aspx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -134,6 +135,13 @@
     </Compile>
     <Compile Include="Home.Master.designer.cs">
       <DependentUpon>Home.Master</DependentUpon>
+    </Compile>
+    <Compile Include="LibraryAutomationSystemGridView.aspx.cs">
+      <DependentUpon>LibraryAutomationSystemGridView.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="LibraryAutomationSystemGridView.aspx.designer.cs">
+      <DependentUpon>LibraryAutomationSystemGridView.aspx</DependentUpon>
     </Compile>
     <Compile Include="LoginForm.aspx.cs">
       <SubType>ASPXCodeBehind</SubType>
