--- a/LibraryAutomationSystem/Web.config
+++ b/LibraryAutomationSystem/Web.config
@@ -33,5 +33,9 @@
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
+  <connectionStrings>
+    <add name="Library_Management_System" connectionString="Data Source=GOWRI;Initial Catalog=LibraryAutomationSystems;Integrated Security=SSPI"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
 
 </configuration>
